# the-chosen

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  the-chosen.py
src/: character.py  commands.py  input_interpreter.py  item.py  main.py  player.py  room.py  rpginfo.py
src/resources/: cellar_description.txt  east_room.txt  hidden_room.txt  library_entrance.txt  ns_passageway.txt  staff_room.txt  stairwell.txt  throne_entrance.txt  welcome_message.txt
the_chosen/: __main__.py  character.py  commands.py  direction_helper.py  door.py  entity.py  input_interpreter.py  io.py  item.py  link.py  main.py  mainloop.py  player.py  resource_helper.py  room.py  rpginfo.py
the_chosen/resources/: air_demon_kill.txt  candle.txt  cellar.txt  cellar_ladder.txt  commands_list.txt  crossbow.txt  crossbow_kill.txt  demon_king.txt  demon_king_con.txt  demon_king_hug.txt  demon_king_kill.txt  earth_demon_kill.txt  east_room.txt  elliot.txt  elliot_con.txt  fire_demon_kill.txt  fire_wand.txt  fire_wand_kill.txt  fire_wand_water_demon_kill.txt  hag.txt  hag_con.txt  hall.txt  hidden_room.txt  holy_water.txt  holy_water_kill.txt  icon.icns  key.txt  key_unlock.txt  library.txt  library_entrance.txt  longsword.txt  longsword_kill.txt  mandrak.txt  mandrak_con.txt  ns_passageway.txt  scholar.txt  scholar_con.txt  staff_room.txt  stranger.txt  stranger_con.txt  (+17 more)
