[metadata]
name = the_chosen
version = 1.1.0
url = https://github.com/tifrueh/the-chosen
description = A short text-adventure
long_description = file: README.md
license = GPL-3.0
author = Timo Früh
author_email = timo.frueh@icloud.com

[options]
include_package_data = True
packages = the_chosen
python_requires = >=3.6
install_requires =
    clear-screen

[options.entry_points]
console_scripts =
    the-chosen = the_chosen.__main__:main